# mcp-client-claude

./: .gitignore  README.md  SECURITY.md  package-lock.json  run_demo.py  setup.sh  start_app.py
mcp-fastapi-server/: .env.example  .gitignore  README.md  enhanced_oauth_client.py  intelligent_mcp_client.py  llm_inference.py  main.py  mcp_client.py  metadata_discovery.py  oauth_client.py  oauth_flow_orchestrator.py  pyproject.toml  requirements.txt  simple_mcp_client.py
mcp-react-ui/: .gitignore  index.html  package-lock.json  package.json
mcp-react-ui/src/: AIChat.jsx  App.jsx  OAuthSetup.jsx  api.js  index.css
