[project]
name = "mcp-fastapi-server"
version = "0.1.0"
description = "FastAPI MCP Server with OAuth integration"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "httpx==0.25.2",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "authlib==1.2.1",
    "python-jose==3.3.0",
    "websockets==12.0",
    "sse-starlette==1.6.5",
    "openai==1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true